--- a/flask/app/templates/category.html
+++ b/flask/app/templates/category.html
@@ -470,7 +470,7 @@
             a.remove();
 
             hideLoadingModal();
-            showSuccessModal(); 
+            showSuccessModal('Excel'); 
 
         } catch (error) {
             console.error('Export failed:', error);
