--- a/flask/app/templates/edit.html
+++ b/flask/app/templates/edit.html
@@ -75,9 +75,9 @@
 
           <div class="row-2">
             <div class="input-box-row2-left">
-              <label class="form-label" id="itemAmount">Item Amount</label>
+              <label class="form-label" id="itemAmount">Fill stock</label>
               <div class="center">
-                <input type="number" class="input-box-row2" name="getamount" value="{{ item.itemAmount }}" min="{{ item.itemAmount }}" placeholder="Fill stock" required>
+                <input type="number" class="input-box-row2" name="getamount" value="0" min="0" placeholder="Fill stock" required>
               </div>
             </div>
             <div class="input-box-row2-right">
@@ -200,7 +200,7 @@
       changePhoto: 'Change Photo',
       itemName: 'Item Name',
       category: 'Category',
-      itemAmount: 'Item Amount',
+      itemAmount: 'Fill Stock',
       itemMin: 'Item Minimum',
       desc: 'Description',
       cnf: 'Confirm',
@@ -216,7 +216,7 @@
       changePhoto: 'เปลี่ยนรูปภาพ',
       itemName: 'ชื่อของ',
       category: 'ประเภท',
-      itemAmount: 'จำนวนของ',
+      itemAmount: 'เติมจำนวนของ',
       itemMin: 'จำนวนของขั้นต่ำ',
       desc: 'คำอธิบายรายละเอียด',
       cnf: 'ยืนยืน',
