--- a/flask/app/templates/manage_user.html
+++ b/flask/app/templates/manage_user.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='css/manage_user.css') }}">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <title>Admin List</title>
+    <title>Users List</title>
 </head>
 <body class="">
     <script>
@@ -28,7 +28,7 @@
                 <i class="material-icons">arrow_back_ios</i>
             </a>
         </div>
-        <h1 class="page-title" id="title">Admin List</h1>
+        <h1 class="page-title" id="title">Users List</h1>
         <div class="header-right">
             <a href="{{ url_for('pending_user')}}" class="pending-link">
                 <i class="material-icons">person_add_alt_1</i>
