--- a/flask/app/templates/category.html
+++ b/flask/app/templates/category.html
@@ -440,7 +440,10 @@
         const exportUrl = this.href; 
 
         try {
-            const response = await fetch(exportUrl);
+            const response = await fetch(exportUrl, {
+                headers: { 'X-CSRFToken': CSRF_TOKEN },
+                cache: 'no-store'
+            });
 
             if (!response.ok) {
                 throw new Error(`Server error (${response.status})`);
