add || 'lightmode' to every page possible

--- a/flask/app/templates/pending_user.html
+++ b/flask/app/templates/pending_user.html
@@ -13,7 +13,7 @@
 <body class="">
     <script>
         document.addEventListener('DOMContentLoaded', () => {
-          const mode = localStorage.getItem('darkmode');
+          const mode = localStorage.getItem('darkmode') || 'lightmode';
           if (mode === 'dark') {
             document.body.classList.add('darkmode');
             document.body.classList.remove('lightmode');
