--- a/flask/app/templates/qr_scanner.html
+++ b/flask/app/templates/qr_scanner.html
@@ -105,7 +105,7 @@
 
     <script>
         document.addEventListener('DOMContentLoaded', () => {
-            let darkmode = localStorage.getItem('darkmode');
+            let darkmode = localStorage.getItem('darkmode') || 'lightmode';
             const body = document.body;
             if (darkmode === 'active') { body.classList.replace('lightmode', 'darkmode'); } 
             else { body.classList.replace('darkmode', 'lightmode'); }
