--- a/flask/app/templates/edit_cate.html
+++ b/flask/app/templates/edit_cate.html
@@ -13,7 +13,7 @@
 <body>
     <script>
         document.addEventListener('DOMContentLoaded', () => {
-          const mode = localStorage.getItem('darkmode');
+          const mode = localStorage.getItem('darkmode') || 'lightmode';
           if (mode === 'dark') {
             document.body.classList.add('darkmode');
             document.body.classList.remove('lightmode');
